--- a/DevNet_Lab/playbooks/enable_ospfv2.yml
+++ b/DevNet_Lab/playbooks/enable_ospfv2.yml
@@ -10,10 +10,10 @@
           network:
            -  address: 198.168.3.0
               wildcard_bits: 0.0.0.255
-              area: 0
+              area: 1
            -  address: 198.168.4.0
               wildcard_bits: 0.0.0.3
-              area: 0
+              area: 1
        state: replaced
 
 
@@ -28,10 +28,32 @@
           network:
            -  address: 198.168.5.0
               wildcard_bits: 0.0.0.255
-              area: 0
+              area: 1
            -  address: 198.168.4.0
               wildcard_bits: 0.0.0.3
+              area: 1
+           -  address: 10.10.10.1
+              wildcard_bits: 0.0.0.3
               area: 0
+        
+      state: replaced
+
+- hosts: R4
+
+  tasks:
+  - name: Configure OSPF on R4 for Inter-Area Routing
+    cisco.ios.ios_ospfv2:
+      config:
+        processes:
+        - process_id: 1
+          network:
+           -  address: 192.168.99.1
+              wildcard_bits: 0.0.0.255
+              area: 2
+           -  address: 10.10.10.2
+              wildcard_bits: 0.0.0.3
+              area: 0
+           
         
       state: replaced
 
