Code Optimization and Fixing of Re-run Issue on EIGRP protocol

--- a/DevNet_Lab/playbooks/ansible.cfg
+++ b/DevNet_Lab/playbooks/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory= ./inventory/hosts
-host_key_checking=False
+inventory= ~/CMP7221_Lab/DevNet_Lab/inventory/hosts
+host_key_checking= False
 stdout_callback=yaml 
 stderr_callback=yaml
+gather_facts= False
