--- a/DevNet_Lab/playbooks/main_executor.yml
+++ b/DevNet_Lab/playbooks/main_executor.yml
@@ -1,37 +1,30 @@
 ---
 - hosts: localhost
+  gather_facts: false
 
   tasks:
     - ansible.builtin.debug:
-        msg: Multi-Playbook Execution....
+        msg: Initiating Execution of Other Playbooks....
 
 
 - name: Begin Execution of Playbook For Interface Configurations
   ansible.builtin.import_playbook: conf_int.yml
 
-- name: Begin Execution of Playbook For P2P Configuration On Loopback Interfaces 
+- name: Begin Execution of Playbook For P2P Configuration On Loopback Interfaces
   ansible.builtin.import_playbook: conf_p2pforloopbacks.yml
 
-- name: Begin Execution of Playbook For BGP Configuration on R3 and R4  
+- name: Begin Execution of Playbook For BGP Configuration on R3 and R4
   ansible.builtin.import_playbook: conf_bgp.yml
 
-- name: Begin Execution of Playbook For GRE Tunneling on R3 and R4  
+- name: Begin Execution of Playbook For GRE Tunneling on R3 and R4
   ansible.builtin.import_playbook: conf_gretunnel.yml
 
-- name: Begin Execution of Playbook For Enabling OSPF on R2 and R3  
+- name: Begin Execution of Playbook For Enabling OSPF on R2 and R3
   ansible.builtin.import_playbook: enable_ospfv2.yml
 
-- name: Begin Execution of Playbook For OSPF Interface Configuration on R2 and R3  
+- name: Begin Execution of Playbook For OSPF Interface Configuration on R2 and R3
   ansible.builtin.import_playbook: conf_ospf_interfaces.yml
 
-- name: Begin Execution of Playbook For EIGRP Configuration on R1 and R2  
+- name: Begin Execution of Playbook For EIGRP Configuration on R1 and R2
   ansible.builtin.import_playbook: conf_eigrp.yml
-
-
-
-
-
-
-
-
-
+...
