Solution delivered. OSPF, BGP, Gre Tunnel, EIGRP, Encrypted credentials all fully functional

--- a/DevNet_Lab/ansible.cfg
+++ b/DevNet_Lab/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
-inventory= ~/CMP7221_Lab/DevNet_Lab/inventory/hosts
+inventory= hosts
 host_key_checking= False
 stdout_callback=yaml 
 stderr_callback=yaml
 gather_facts= False
+action_warnings=False
+
