comments made and playbook folder deleted

--- a/DevNet_Lab/automator.yml
+++ b/DevNet_Lab/automator.yml
@@ -1,5 +1,8 @@
 ---
 
+#This playbook executes all the playbooks required to automate
+#the network interface configurations, BPG, GRE Tunnel, OSPF and EIGRP
+#protocols. The file runs sequentially from top to bottom.
 
 - name: Begin Execution of Playbook For Interface Configurations
   import_playbook: tasks/conf_int.yml
