replaced automator.yml with jautomator.yml

--- a/DevNet_Lab/jautomator.yml
+++ b/DevNet_Lab/jautomator.yml
@@ -11,7 +11,7 @@
   import_playbook: tasks/conf_p2pforloopbacks.yml
 
 - name: Begin Execution of Playbook For BGP Configuration on R3 and R4
-  import_playbook: tasks/conf_bgp_global.yml
+  import_playbook: tasks/conf_bgp.yml
 
 - name: Begin Execution of Playbook For GRE Tunneling on R3 and R4
   import_playbook: tasks/conf_gretunnel.yml
