--- a/DevNet_Lab/tasks/conf_bgp_global.yml
+++ b/DevNet_Lab/tasks/conf_bgp_global.yml
@@ -1,4 +1,5 @@
 ---
+#This file configures BGP on Routers 3 and 4
 
 - hosts: R3
   gather_facts: false
@@ -35,3 +36,5 @@
        state: replaced
 
 ...
+
+
