--- a/DevNet_Lab/tasks/enable_ospfv2.yml
+++ b/DevNet_Lab/tasks/enable_ospfv2.yml
@@ -1,4 +1,6 @@
 ---
+
+#This file enables OSPF protocol on R2, R3, and R4
 - hosts: R2
   gather_facts: false
 
@@ -58,6 +60,8 @@
            
         
       state: replaced
+      
+...
 
 
 
