IP changes made on interfaces

--- a/DevNet_Lab/tasks/enable_ospfv2.yml
+++ b/DevNet_Lab/tasks/enable_ospfv2.yml
@@ -11,7 +11,10 @@
         processes:
         - process_id: 1
           network:
-           -  address: 192.168.3.0
+           -  address: 192.168.30.0
+              wildcard_bits: 0.0.0.255
+              area: '1'
+           -  address: 192.168.40.0
               wildcard_bits: 0.0.0.255
               area: '1'
            -  address: 192.168.4.0
@@ -35,7 +38,10 @@
            -  address: 192.168.4.0
               wildcard_bits: 0.0.0.3
               area: '1'
-           -  address: 192.168.5.0
+           -  address: 192.168.50.0
+              wildcard_bits: 0.0.0.255
+              area: '1'
+           -  address: 192.168.60.0
               wildcard_bits: 0.0.0.255
               area: '1'
            
@@ -51,7 +57,10 @@
         processes:
         - process_id: 1
           network:
-           -  address: 192.168.99.0
+           -  address: 192.168.70.0
+              wildcard_bits: 0.0.0.255
+              area: '2'
+           -  address: 192.168.80.0
               wildcard_bits: 0.0.0.255
               area: '2'
            -  address: 10.10.10.0
