--- a/DevNet_Lab/tasks/conf_int.yml
+++ b/DevNet_Lab/tasks/conf_int.yml
@@ -6,29 +6,35 @@
    gather_facts: false
  
    tasks:
-    - name: Loopback Interface Creation & IP Address Configuration 
+    - name: Loopback0 Configuration 
       cisco.ios.ios_l3_interfaces:
        config:
        - name: Loopback0
          ipv4:
          - address: 192.168.10.1 255.255.255.0
-
+       state: merged
+    - name: Loopback1 Configuration 
+      cisco.ios.ios_l3_interfaces:
+       config:
        - name: Loopback1
          ipv4:
          - address: 192.168.20.1 255.255.255.0
-
        state: merged
 
  - hosts: R2
    gather_facts: false
    
    tasks:
-   - name: Loopback Interface Creation & IP Address Configuration 
+   - name: Loopback0 Configuration 
      cisco.ios.ios_l3_interfaces:
       config:
       - name: Loopback0
         ipv4:
         - address: 192.168.30.1 255.255.255.0
+      state: merged
+   - name: Loopback1 Configuration 
+     cisco.ios.ios_l3_interfaces:
+      config:
       - name: Loopback1
         ipv4:
         - address: 192.168.40.1 255.255.255.0
@@ -39,15 +45,20 @@
    gather_facts: false
    
    tasks:
-   - name: Loopback Interface Creation & IP Address Configuration 
+   - name: Loopback0 Configuration 
      cisco.ios.ios_l3_interfaces:
       config:
       - name: Loopback0
         ipv4:
         - address: 192.168.50.1 255.255.255.0
+      state: merged
+   - name: Loopback1 Configuration 
+     cisco.ios.ios_l3_interfaces:
+      config:
       - name: Loopback1
         ipv4:
         - address: 192.168.60.1 255.255.255.0
+      
         
 
       state: merged
@@ -56,12 +67,16 @@
    gather_facts: false
    
    tasks:
-    - name: Loopback Interface Creation & IP Address Configuration 
+    - name: Loopback0 Configuration 
       cisco.ios.ios_l3_interfaces:
        config:
        - name: Loopback0
          ipv4:
          - address: 192.168.70.1 255.255.255.0
+       state: merged
+    - name: Loopback1 Configuration 
+      cisco.ios.ios_l3_interfaces:
+       config:
        - name: Loopback1
          ipv4:
          - address: 192.168.80.1 255.255.255.0
