--- a/DevNet_Lab/jautomator.yml
+++ b/DevNet_Lab/jautomator.yml
@@ -24,4 +24,12 @@
 
 - name: Begin Execution of Playbook For EIGRP Configuration on R1 and R2
   import_playbook: tasks/conf_eigrp.yml
+  
+- name: Network Connectivity Test From R1
+  import_playbook: tasks/Connectivity_test_from_R1.yml
+  
+- name: Network Connectivity Test From R2
+  import_playbook: tasks/Connectivity_test_from_R2.yml
+  
+  
 ...
