--- a/DevNet_Lab/tasks/Connectivity_test_from_R1.yml
+++ b/DevNet_Lab/tasks/Connectivity_test_from_R1.yml
@@ -5,27 +5,55 @@
 
   tasks:
     - name: Ping 192.168.30.1
-      ansible.builtin.ping:
-        host: 192.168.30.1
+      command: ping -c 4 192.168.30.1
+      register: ping_result_30
+      ignore_errors: true
 
     - name: Ping 192.168.40.1
-      ansible.builtin.ping:
-        host: 192.168.40.1
+      command: ping -c 4 192.168.40.1
+      register: ping_result_40
+      ignore_errors: true
 
     - name: Ping 192.168.50.1
-      ansible.builtin.ping:
-        host: 192.168.50.1
+      command: ping -c 4 192.168.50.1
+      register: ping_result_50
+      ignore_errors: true
 
-    - name: Ping 192.168.60.1
-      ansible.builtin.ping:
-        host: 192.168.60.1
+    - name: Ping 192.168.60.150
+      command: ping -c 4 192.168.60.150
+      register: ping_result_60
+      ignore_errors: true
 
     - name: Ping 192.168.70.1
-      ansible.builtin.ping:
-        host: 192.168.70.1
+      command: ping -c 4 192.168.70.1
+      register: ping_result_70
+      ignore_errors: true
 
     - name: Ping 192.168.80.1
-      ansible.builtin.ping:
-        host: 192.168.80.1
+      command: ping -c 4 192.168.80.1
+      register: ping_result_80
+      ignore_errors: true
 
+    - name: Display Ping Results
+      debug:
+        var: item.stdout_lines
+      loop:
+        - "{{ ping_result_30 }}"
+        - "{{ ping_result_40 }}"
+        - "{{ ping_result_50 }}"
+        - "{{ ping_result_60 }}"
+        - "{{ ping_result_70 }}"
+        - "{{ ping_result_80 }}"
+
+    - name: Fail the task if any ping fails
+      fail:
+        msg: >
+          "Ping tests failed for the following addresses:
+          {% if ping_result_30.rc != 0 %} 192.168.30.1 {% endif %}
+          {% if ping_result_40.rc != 0 %} 192.168.40.1 {% endif %}
+          {% if ping_result_50.rc != 0 %} 192.168.50.1 {% endif %}
+          {% if ping_result_60.rc != 0 %} 192.168.60.150 {% endif %}
+          {% if ping_result_70.rc != 0 %} 192.168.70.1 {% endif %}
+          {% if ping_result_80.rc != 0 %} 192.168.80.1 {% endif %}"
+      when: "ping_result_30.rc != 0 or ping_result_40.rc != 0 or ping_result_50.rc != 0 or ping_result_60.rc != 0 or ping_result_70.rc != 0 or ping_result_80.rc != 0"
 
