--- a/DevNet_Lab/tasks/conf_int.yml
+++ b/DevNet_Lab/tasks/conf_int.yml
@@ -5,18 +5,18 @@
   gather_facts: false
 
   tasks:
-    - name: Loopback0 Configuration 
+    - name: GigabitEthernet0/2 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback0
+          - name: GigabitEthernet0/2
             ipv4:
               - address: 192.168.10.1 255.255.255.0
         state: merged
 
-    - name: Loopback1 Configuration 
+    - name: GigabitEthernet0/3 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback1
+          - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.20.1 255.255.255.0
         state: merged
@@ -25,18 +25,18 @@
   gather_facts: false
 
   tasks:
-    - name: Loopback0 Configuration 
+    - name: GigabitEthernet0/1 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback0
+          - name: GigabitEthernet0/1
             ipv4:
               - address: 192.168.30.1 255.255.255.0
         state: merged
 
-    - name: Loopback1 Configuration 
+    - name: GigabitEthernet0/3 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback1
+          - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.40.1 255.255.255.0
         state: merged
@@ -45,18 +45,18 @@
   gather_facts: false
 
   tasks:
-    - name: Loopback0 Configuration 
+    - name: GigabitEthernet0/2 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback0
+          - name: GigabitEthernet0/2
             ipv4:
               - address: 192.168.50.1 255.255.255.0
         state: merged
 
-    - name: Loopback1 Configuration 
+    - name: GigabitEthernet0/3 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback1
+          - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.60.1 255.255.255.0
         state: merged
@@ -65,18 +65,18 @@
   gather_facts: false
 
   tasks:
-    - name: Loopback0 Configuration 
+    - name: GigabitEthernet0/2 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback0
+          - name: GigabitEthernet0/2
             ipv4:
               - address: 192.168.70.1 255.255.255.0
         state: merged
 
-    - name: Loopback1 Configuration 
+    - name: GigabitEthernet0/3 Configuration 
       cisco.ios.ios_l3_interfaces:
         config:
-          - name: Loopback1
+          - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.80.1 255.255.255.0
         state: merged
