--- a/DevNet_Lab/tasks/conf_int.yml
+++ b/DevNet_Lab/tasks/conf_int.yml
@@ -1,4 +1,3 @@
----
 # This playbook configures the loopback interfaces on each of the routers
 
 - hosts: R1
@@ -11,6 +10,7 @@
           - name: GigabitEthernet0/2
             ipv4:
               - address: 192.168.10.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
     - name: GigabitEthernet0/3 Configuration 
@@ -19,6 +19,7 @@
           - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.20.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
 - hosts: R2
@@ -31,6 +32,7 @@
           - name: GigabitEthernet0/1
             ipv4:
               - address: 192.168.30.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
     - name: GigabitEthernet0/3 Configuration 
@@ -39,6 +41,7 @@
           - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.40.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
 - hosts: R3
@@ -51,6 +54,7 @@
           - name: GigabitEthernet0/2
             ipv4:
               - address: 192.168.50.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
     - name: GigabitEthernet0/3 Configuration 
@@ -59,6 +63,7 @@
           - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.60.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
 - hosts: R4
@@ -71,6 +76,7 @@
           - name: GigabitEthernet0/2
             ipv4:
               - address: 192.168.70.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
     - name: GigabitEthernet0/3 Configuration 
@@ -79,5 +85,6 @@
           - name: GigabitEthernet0/3
             ipv4:
               - address: 192.168.80.1 255.255.255.0
+            shutdown: no  # Add this line to enable the interface
         state: merged
 
